# code-jam

./: LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini  tutorial.txt
boxed/: __init__.py  __main__.py  art.py  border.py  constants.py  grid.py  test.py  utils.py
boxed/screens/: credits.py  game.py  grid.py  main_menu.py  tutorial.py  victory.py
docs/: CONTROLS.md  GAMEPLAY.md  INSTALLATION.md  PYTHON_SETUP.md  README.md
src/: __main__.py  border.py  main.py
src/screens/: credits.py  main_menu.py
