[tool.poetry]
name = "Boxed"
version = "0.0.1"
description = "A recursive terminal based puzzle game."
authors = [
    "Aaris-Kazi <aaris-kazi@users.noreply.github.com>",
    "Abhishek10351 <abhishek10351@users.noreply.github.com>",
    "DrokoDomi <drokodomi@users.noreply.github.com>",
    "Numerlor <numerlor@users.noreply.github.com>",
    "ShanTen <numerlor@users.noreply.github.com>",
    "SystematicError <systematicerror@users.noreply.github.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"

blessed = "~1.18.1"
playsound = "~1.2.2"
vext = {version = "~0.7.6", platform = "linux"}
"vext.gi" = {version = "~0.7.4", platform = "linux"}

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~3.7"
isort = "~5.9"
pre-commit = "~2.13.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-annotations = "~2.0"
flake8-bandit = "~2.1"
flake8-docstrings = "~1.5"
flake8-isort = "~4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Isort configuration
multi_line_output=5
known_first_party="boxed"
